hphp/hack/test/typecheck/fc_enum_12.php.exp
File "fc_enum_12.php", line 4, characters 14-27:
The type HH\BuiltinEnum expects 1 type parameter(s) (Typing[4101])
File "BuiltinEnum.hhi", line 26, characters 16-26:
Definition is here
